# imaqliq.ru

./: README.md
client/: CMakeCache.txt  CMakeLists.txt  Makefile  TcpConnector.cpp  TcpConnector.h  cmake_install.cmake  ima_cli  mail.cpp  main.cpp  txt.file
server/: CMakeCache.txt  CMakeLists.txt  Makefile  TEST.TXT  TcpServer.cpp  TcpServer.h  cmake_install.cmake  ima_svc  ipaddr.txt  main.cpp  test.txt  test_transfe_.txt  test_transfer.txt
